# aeroza

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile.dev  Procfile.railway  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json
.github/: dependabot.yml
.github/workflows/: ci.yml
aeroza/: __init__.py  config.py  main.py
aeroza/admin/: __init__.py  push_test.py  routes.py  seed_event.py
aeroza/auth/: __init__.py  dependencies.py  hashing.py  models.py  routes.py  schemas.py  store.py
aeroza/cli/: __init__.py  __main__.py  api_keys.py  dispatch_webhooks.py  ingest_alerts.py  ingest_metar.py  ingest_mrms.py  materialise_mrms.py  nowcast_mrms.py  prewarm_tiles.py  prune_mrms.py  verify_nowcasts.py
aeroza/ingest/: __init__.py  _aws.py  metar.py  metar_models.py  metar_store.py  mrms.py  mrms_decode.py  mrms_grids.py  mrms_grids_models.py  mrms_grids_store.py  mrms_materialise_event.py  mrms_materialise_poll.py  mrms_models.py  mrms_poll.py  mrms_store.py  mrms_zarr.py  nws_alerts.py  nws_alerts_models.py  nws_alerts_store.py  poll.py  scheduler.py
aeroza/nowcast/: __init__.py  engine.py  event_worker.py  lagged_ensemble.py  models.py  pysteps_forecaster.py  store.py  worker.py
aeroza/push/: __init__.py  apns.py  dispatch.py  models.py  routes.py  schemas.py  store.py
aeroza/query/: __init__.py  alerts.py  dependencies.py  historical_alerts.py  metar.py  mrms.py  mrms_grids.py  mrms_sample.py  nowcasts.py  parsers.py  schemas.py  stats.py  v1.py
aeroza/retention/: __init__.py  worker.py
aeroza/shared/: __init__.py  base.py  db.py  http.py  ratelimit.py  types.py
aeroza/stream/: __init__.py  nats.py  publisher.py  subscriber.py
aeroza/tiles/: __init__.py  cache.py  colormap.py  prewarm.py  r2.py  raster.py  render_pool.py  web_mercator.py
aeroza/verify/: __init__.py  event_worker.py  metrics.py  models.py  schemas.py  store.py  worker.py
aeroza/webhooks/: __init__.py  delivery.py  delivery_models.py  delivery_schemas.py  delivery_store.py  models.py  orchestrator.py  routes.py  rule_evaluator.py  rule_models.py  rule_routes.py  rule_schemas.py  rule_store.py  schemas.py  signing.py  store.py
alembic/: env.py
alembic/versions/: 20260501_1300_initial_schema.py  20260501_1500_add_mrms_files.py  20260501_1700_add_mrms_grids.py  20260501_2100_add_webhook_subscriptions.py  20260501_2200_add_alert_rules.py  20260501_2300_add_webhook_deliveries.py  20260502_0000_add_nowcasts_and_verifications.py  20260502_1200_add_categorical_verification_metrics.py  20260502_1300_add_api_keys.py  20260502_1400_add_metar_observations.py  20260503_0900_add_ensemble_and_probabilistic_metrics.py  20260503_2200_add_reliability_bins.py  20260603_1200_add_device_tokens.py  20260610_0800_enable_rls_on_alembic_version.py  20260610_0900_enable_rls_on_public_tables.py  (+1 more)
docs/: DEPLOY-RAILWAY.md  POSTGIS-SCHEMA-RELOCATION.md  ROADMAP.md
scripts/: backfill-prewarm.py  railway-start.sh  seed-historical.sh  start-stack.sh
sdk-ts/: README.md  eslint.config.mjs  package.json  tsconfig.json
tests/: conftest.py  test_admin_push_test.py  test_admin_seed_event_routes.py  test_alert_rule_evaluator.py  test_alert_rule_schemas.py  test_alert_rule_store.py  test_auth_hashing.py  test_auth_store.py  test_cli.py  test_cli_ingest_mrms.py  test_cli_materialise_mrms.py  test_cli_prewarm_tiles.py  test_cli_prune_mrms.py  test_health.py  test_lagged_ensemble.py  test_metar_fetch.py  test_metar_parse.py  test_metar_store.py  test_mrms.py  test_mrms_decode.py  test_mrms_decode_grib.py  test_mrms_grids.py  test_mrms_grids_query_unit.py  test_mrms_grids_store.py  test_mrms_materialise_event.py  test_mrms_materialise_poll.py  test_mrms_poll.py  test_mrms_sample.py  test_mrms_store.py  test_mrms_zarr.py  test_nats_mrms_grid_publisher.py  test_nats_mrms_publisher.py  test_nats_mrms_subscriber.py  test_nats_publisher.py  test_nats_subscriber.py  test_nowcast_engine.py  test_nowcast_worker.py  test_nws_alerts.py  test_nws_alerts_store.py  test_poll.py  (+47 more)
web/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
(+55 files in other folders)
