[project]
name = "aeroza"
version = "0.1.0"
description = "Programmable weather intelligence: streaming APIs, geospatial queries, and probabilistic nowcasting."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Aeroza" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "structlog>=24.4",
]

[project.optional-dependencies]
db = [
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "geoalchemy2>=0.16",
    "shapely>=2.0",
]
cache = [
    "redis>=5.2",
]
stream = [
    "nats-py>=2.9",
]
ingest = [
    "boto3>=1.35",
    "xarray>=2024.10",
    "zarr>=2.18",
    "numpy>=2.1",
]
# `nowcast` and `grib` carry heavy C-extension deps (pysteps needs OpenMP via
# libomp; cfgrib needs eccodes). They are intentionally outside `--all-extras`
# so day-zero contributors aren't blocked by system prerequisites. Phase 3 will
# document the libomp/eccodes setup before wiring them in.
nowcast = []
grib = [
    "cfgrib>=0.9",
]
verify = [
    "pandas>=2.2",
]

[project.scripts]
aeroza-ingest-alerts = "aeroza.cli.ingest_alerts:main"
aeroza-ingest-mrms = "aeroza.cli.ingest_mrms:main"
aeroza-materialise-mrms = "aeroza.cli.materialise_mrms:main"
aeroza-nowcast-mrms = "aeroza.cli.nowcast_mrms:main"
aeroza-verify-nowcasts = "aeroza.cli.verify_nowcasts:main"
aeroza-dispatch-webhooks = "aeroza.cli.dispatch_webhooks:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-redis>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aeroza"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", ".venv", "build"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # line length handled by formatter
    "RUF001", # string-literal "ambiguous" unicode (×, …, →, —) — intentional prose
    "RUF002", # docstring "ambiguous" unicode — same reason
    "RUF003", # comment "ambiguous" unicode — same reason
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["shapely.*", "geoalchemy2.*", "boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

# Additional stub-less modules will be added here as each gets wired in
# (pysteps, cfgrib, etc.).

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: pure unit tests with no external dependencies",
    "integration: tests requiring docker-compose services",
    "grib: tests requiring eccodes / cfgrib (skipped when not available)",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
source = ["aeroza"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
